[project]
name = "trackemdown"
version = "0.1.0"
description = "Geotagging service that converts addresses or coordinates to hierarchical geotags with configurable resolution (0-15)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "h3>=3.7.6",
    "httpx>=0.25.2",
    "pydantic>=2.5.0",
    "gradio>=4.0.0",
    "plotly>=5.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trackemdown"]

[tool.setuptools.packages.find]
where = ["src"]
